@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!-- NAS4Free default system configuration -->
 <nas4free>
-	<version>1.3</version>
+	<version>1.4</version>
 	<lastchange></lastchange>
 	<system>
 		<hostname>nas4free</hostname>
